# stochastic-control

./: .gitignore  pyproject.toml
.claude/: settings.local.json
docs/: colleague_note.md  eval_llm_hard_results.json  eval_llm_results.json  executive_slide.md  finance_ai_training_ground.pptx  financial-rlvr-gym-slides.pptx  make_slide.py  paper_neurips.md  paper_neurips_4p.md  paper_neurips_short.md  pitch.md  team-memo-financial-rlvr-gym.md
docs/data/: eval_control_context.json  eval_control_original.json  eval_cot_verification.json  eval_energy_planning.json  eval_kappa_comparison.json  eval_log_1.txt  eval_log_2.txt  eval_log_3.txt  eval_log_4.txt  eval_log_watcher.txt  eval_opus_buckets.json  eval_opus_buckets_v2.json  eval_pass_at_k.json  eval_planning_context.json  eval_planning_gpt4o.json  eval_planning_haiku.json  eval_planning_original.json  eval_planning_sonnet.json  eval_run_log.txt  example_episodes.md  example_episodes_full.md  full_parameter_sweep.json  top_configs_with_j.json
financial_gym/: __init__.py
financial_gym/agents/: __init__.py  (+3 more)
scripts/: create_slides.py  eval_4_conditions.py  eval_energy_dispatch.py  eval_llm.py  eval_multi_model.py  eval_opus_buckets.py  eval_parallel.py  eval_trained.py  eval_trained_vllm.py  generate_sft_data.py  plot_3d_surfaces.py  plot_landscape.py  runpod_setup.sh  test_model_multiturn.py  test_reward.py  train_grpo.py  train_sft_warmup.py  train_trl_grpo.py  trl_env.py
tests/: test_agents.py  test_base.py  test_generator.py  test_goldilocks.py  test_integration.py  test_prompts.py  test_verifier.py
(+13 files in other folders)
