[project]
name = "financial-rlvr-gym"
version = "0.1.0"
description = "Verifiable RLVR gym for financial planning under uncertainty"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
